--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,4 +3,4 @@
 <h1>Name: <%= @artist.name %></h1>
 <h1>Number of Songs: <%= @artist.song_count %></h1>
 
-<h1>Artist Song: <%= link_to @artist.song.name, song_path(@artist.song) %></h1>
+<h1>Artist Song: <%= link_to @artist.songs.name, song_path(@artist.song) %></h1>
