--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -4,5 +4,7 @@
 <h1>Number of Songs: <%= @artist.song_count %></h1>
 
 <% @artist.songs.each do |artist_song| %>
-  <h1>Artist Song: <%= link_to artist_song.title, song_path(artist_song) %></h1>
+  <ul>
+    <li>Artist Song: <%= link_to artist_song.title, song_path(artist_song) %></li>
+  </ul>
 <% end %>
