--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -4,6 +4,6 @@
   <h1><%= artist.name %><h1>
 
   <h2>Total Songs From Artist:</h2>
-  <%= artist.song_count %>
+  <%= pluralize(artist.song_count, 'song') %> 
 
 <% end %>
