--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,4 +1,3 @@
 <h3>Show Song</h3>
 
-<h1>Song Name: <%= @song.name %></h1>
-<h1>Song Artist: <%= @song.artist_name %></h1>
+<h1><%= @song.artist_name %> - <%= @song.title %></h1>
