--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <h3>Song Index</h3>
 
 <% @songs.each do |song| %>
-  <h1><%= link_to song.artist_name - song.title, song_path(song) %></h1>
+  <h1><%= link_to song.artist_name '-' song.title, song_path(song) %></h1>
 <% end %>
