--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,4 +2,4 @@
 
 <h1><%= @song.artist_name %> - <%= @song.title %></h1>
 
-<h2>Song Artist: <%= link_to song.artist_name, artist_path(song.artist) %></h2>
+<h2>Song Artist: <%= link_to @song.artist_name, artist_path(@song.artist) %></h2>
